@@ -5,6 +5,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - onmainwindow.cpp: include sshd PID file path option in quotes to support
       whitespaces within the var directory path on Windows. Add comment to
       revisit this later on non-Windows-platforms, too. Fixes: #916.
+    - {unixhelper.{cpp,h},x2goclient.pro{,.maemo}}: add unixhelper stub.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
